Refactor del codigo sin framework

--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finalizar Compra - Ecommerce DuocUC</title>
-    <link rel="preload" href="css/normalize.css" as="style">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preload" href="css/skeleton.css" as="style">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="preload" href="css/custom.css" as="style">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="preload" href="../assets/css/main.css" as="style">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
     <header id="header" class="header">
@@ -86,7 +82,7 @@
         </div>
     </div>
 
-    <script src="js/auth.js"></script>
-    <script src="js/checkout.js"></script>
+    <script src="../auth/auth.js"></script>
+    <script src="checkout.js"></script>
 </body>
 </html>
