--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Carrito</title>
-    <link rel="preload" href="css/normalize.css" as="style">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preload" href="css/skeleton.css" as="style">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="preload" href="css/styles.css" as="style">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="preload" href="assets/css/main.css" as="style">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
@@ -32,7 +28,7 @@
                 <div class="two columns u-pull-right">
                     <ul>
                         <li class="submenu">
-                            <img src="img/cart.png" id="img-carrito" alt="carrito">
+                            <img src="assets/img/cart.png" id="img-carrito" alt="carrito">
                             <div id="carrito">
                                 <table id="lista-carrito" class="u-full-width">
                                     <thead>
@@ -66,7 +62,7 @@
         <div class="row">
             <div class="four columns">
                 <div class="card">
-                    <img src="img/curso4.jpg" class="imagen-curso u-full-width">
+                    <img src="assets/img/curso4.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
                         <h4>Huerto en casa</h4>
                         <p class="precio">$200 <span class="u-pull-right "></span></p>
@@ -77,7 +73,7 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/curso5.jpg" class="imagen-curso u-full-width">
+                    <img src="assets/img/curso5.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
                         <h4>Decora tu hogar</h4>
                         <p class="precio">$1020 <span class="u-pull-right "></span></p>
@@ -88,7 +84,7 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/curso1.jpg" class="imagen-curso u-full-width">
+                    <img src="assets/img/curso1.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
                         <h4>Diseño Web</h4>
                         <p class="precio">$1020 <span class="u-pull-right "></span></p>
@@ -102,7 +98,7 @@
         <div class="row">
             <div class="four columns">
                 <div class="card">
-                    <img src="img/curso2.jpg" class="imagen-curso u-full-width">
+                    <img src="assets/img/curso2.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
                         <h4>Comida Mexicana</h4>
                         <p class="precio">$1020 <span class="u-pull-right "></span></p>
@@ -113,7 +109,7 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/curso3.jpg" class="imagen-curso u-full-width">
+                    <img src="assets/img/curso3.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
                         <h4>Estudio Musical</h4>
                         <p class="precio">$1020 <span class="u-pull-right "></span></p>
@@ -124,7 +120,7 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/curso4.jpg" class="imagen-curso u-full-width">
+                    <img src="assets/img/curso4.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
                         <h4>Cosecha Verduras</h4>
                         <p class="precio">$10 <span class="u-pull-right "></span></p>
@@ -138,7 +134,7 @@
         <div class="row">
             <div class="four columns">
                 <div class="card">
-                    <img src="img/curso5.jpg" class="imagen-curso u-full-width">
+                    <img src="assets/img/curso5.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
                         <h4>Prepara Galletas</h4>
                         <p class="precio">$10 <span class="u-pull-right "></span></p>
@@ -149,7 +145,7 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/curso1.jpg" class="imagen-curso u-full-width">
+                    <img src="assets/img/curso1.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
                         <h4>JavaScript Moderno</h4>
                         <p class="precio">$1000 <span class="u-pull-right "></span></p>
@@ -160,7 +156,7 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/curso2.jpg" class="imagen-curso u-full-width">
+                    <img src="assets/img/curso2.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
                         <h4>Comida Natural</h4>
                         <p class="precio">$100 <span class="u-pull-right "></span></p>
@@ -171,8 +167,8 @@
             </div>
         </div>
     </div>
-    <script src="js/auth.js"></script>
-    <script src="js/app.js"></script>
+    <script src="./auth/auth.js"></script>
+    <script src="./auth/app.js"></script>
 </body>
 
 </html>
