--- a/login/login.html
+++ b/login/login.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Iniciar Sesión - Ecommerce DuocUC</title>
-    <link rel="preload" href="css/normalize.css" as="style">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preload" href="css/skeleton.css" as="style">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="preload" href="css/custom.css" as="style">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="preload" href="../assets/css/main.css" as="style">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
     <header id="header" class="header">
@@ -66,7 +62,7 @@
                             <div class="twelve columns text-center">
                                 <p>
                                     ¿No tienes una cuenta? 
-                                    <a href="register.html">Regístrate aquí</a>
+                                    <a href="../register/register.html">Regístrate aquí</a>
                                 </p>
                                 <p>
                                     <a href="reset-password.html">¿Olvidaste tu contraseña?</a>
@@ -79,7 +75,7 @@
         </div>
     </div>
 
-    <script src="js/auth.js"></script>
-    <script src="js/login.js"></script>
+    <script src="../auth/auth.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
