--- a/register/register.html
+++ b/register/register.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Registro - Ecommerce DuocUC</title>
-    <link rel="preload" href="css/normalize.css" as="style">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preload" href="css/skeleton.css" as="style">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="preload" href="css/custom.css" as="style">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="preload" href="../assets/css/main.css" as="style">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
     <header id="header" class="header">
@@ -88,7 +84,7 @@
                             <div class="twelve columns text-center">
                                 <p>
                                     ¿Ya tienes una cuenta? 
-                                    <a href="login.html">Inicia sesión aquí</a>
+                                    <a href="../login/login.html">Inicia sesión aquí</a>
                                 </p>
                             </div>
                         </div>
@@ -98,7 +94,7 @@
         </div>
     </div>
 
-    <script src="js/auth.js"></script>
-    <script src="js/register.js"></script>
+    <script src="../auth/auth.js"></script>
+    <script src="register.js"></script>
 </body>
 </html>
